--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,9 +7,8 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751714.md#1">【新闻看点】危机来了？官称过紧日子及防暴动</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751676.md#1">曹兴诚批九二共识胡说八道 专家赞他有勇气</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767482.md#1">廖祖笙：饿饭党说要“全面建成小康社会”</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767385.md#1">【名家专栏】主流媒体的新年决心：停止撒谎</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764911.md#1">【名家专栏】浅析十年来美国主要经济论点</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766848.md#1">唐风：温哥华中学生课堂讲香港被踢下体之思考</a><br>
@@ -22,6 +21,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764864.md#1">【名家专栏】川普减企业税为何令左派烦恼</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765134.md#1">【名家专栏】改善地球环境 无需社会主义政策</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764938.md#1">新州：从违反程序看中共破坏司法公正</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764613.md#1">袁斌：“小康年”将到，访民为何吊死在信访局</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,214,920 人
+- 共 349,211,670 人
 ```
 </strong>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
