--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -24,7 +24,6 @@
 吉林省白城市通榆县向海乡富国村位于向海保护区内，周边的自然林是亚洲最大的蒙古黄榆林，百年老榆树就有一千多棵，小树不计其数。蒙古黄榆是国家二级保护树种。
 
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 12:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11665020.md#1" target="_blank">中国山西煤矿瓦斯爆炸 造成15死9伤</a><br></h3>中国山西省平遥县昨日（18日）下午发生一起煤矿瓦斯爆炸事故，造成15人遇难，9人受伤，搜救已在今日凌晨2时结束，事故原因正在调查中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 10:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/16/n11659848.md#1" target="_blank">浙大学生与男友吵架后遗体在河道内被发现</a><br></h3>11月11日，大陆新浪微博上传出浙江平湖市的“一个单身妈妈的血泪控诉”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/15/n11657369.md#1" target="_blank">安徽蚌埠5间门面房着火 致5死3伤</a><br></h3>11月15日，中共安徽省应急管理厅网站消息，今天（15日）6时57分许，安徽蚌埠市龙子湖区淮河路车站新村853栋门面房发生火灾，导致5死，1重伤，2人轻伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 1:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/14/n11654973.md#1" target="_blank">在北京确诊两名鼠疫患者 一人病情危重</a><br></h3>近日，两名内蒙古患者在北京被确诊为鼠疫的消息引发广泛关注。《新京报》14日最新报导称，目前一名患者病情危重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:42 PM							</td></tr>
@@ -33,5 +32,6 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/30/n11621449.md#1" target="_blank">81天无雨土地干裂 江西安徽旱情严重</a><br></h3>七月下旬以来，大陆江西、安徽省持续高温且无降雨。官方称，平均无雨日有81天，江西、安徽各地发生严重旱情，部分地区出现特级旱情，土地龟裂、水稻枯死，农民损失惨重；江河湖库水位持续下级，部分地区出现民众饮水困难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/28/n11617418.md#1" target="_blank">延安市车载试验装置突爆炸 至少8死5伤</a><br></h3>10月27日，陕西省延安市延长县一车载试验装置完成试验后，在回程途中突然发生爆炸，导致8死5伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 5:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/27/n11616220.md#1" target="_blank">甘肃深夜发生5.7级地震 民众逃到街上</a><br></h3>28日凌晨2时许，甘肃省甘南藏族自治州夏河县发生5.7级地震。合作市、夏河县震感强烈，并伴有余震，民众纷纷在寒冷的深夜外出避险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 6:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/10/25/n11611902.md#1" target="_blank">河南化工厂爆炸致1人死 珠海商铺突发大火</a><br></h3>10月25日上午，河南一家化工厂发生爆炸，目前已知事故造成1人死亡。现场画面显示，火势凶猛，现场掀起“蘑菇云”。附近居民表示，爆炸发生时自家房子颤抖，家中有玻璃被震碎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月25日 7:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/ncid280_5.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/ncid280_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_5.htm">http://www.epochtimes.com/gb/ncid280_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
