--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -38,10 +38,11 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767063.md#1">袁斌：2019年以悲剧落幕，2020年以惨剧揭幕</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766694.md#1">【翻墙必看】中共官员自相残杀的背后</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766765.md#1">【拍案惊奇】武汉肺炎例增 SARS阴影港台预防</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751194.md#1">【2019盘点】响彻世界政坛的正义之声</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766872.md#1">武汉肺炎疫情扩大 大陆多地又爆发流感</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766821.md#1">美伊冲突 专家：北京陷内困无瑕顾及伊朗</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11755421.md#1">2020年中国十个科技品牌在海外恐碰壁</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766705.md#1">伊朗将领被炸死 美前官员事前精准“预言”</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767902.md#1">香港中联办主任王志民被免职</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767073.md#1">2019年前11个月 大陆车市产销量同比下降</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767110.md#1">程晓容：长江白鲟灭绝 中共乃危机源头</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767498.md#1">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br>
@@ -49,7 +50,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766814.md#1">楼市趋冷 北京760万元二手房两月降170万</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766842.md#1">新年伊始茅台连跌两日 市值蒸发1300亿</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765922.md#1">王赫：中国经济乱象纷呈 中共束手无策</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751194.md#1">响彻在世界政坛的正义之声（下）</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766445.md#1">中共高速收费糗事：拦急救车  无高速路也得办卡</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766515.md#1">传武汉已掌握新病毒 港府急应变拟升级防疫</a><br>
